--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "kartik-v/yii2-widget-select2": "@dev",
         "twbs/bootstrap": "4.0.0-beta.2",
         "luyadev/luya-bootstrap4": "^1.0@dev",
-        "fortawesome/font-awesome": "~4.7"
+        "fortawesome/font-awesome": "~4.7",
+        "powerkernel/yii2-photoswipe": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
