--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,13 @@
         "dench/yii2-sortable": "@dev",
         "dench/yii2-block": "@dev",
         "dench/yii2-products": "@dev",
+        "dench/yii2-modal": "@dev",
         "bower-asset/photoswipe": "*",
         "kartik-v/bootstrap-fileinput": "4.3.8",
         "himiklab/yii2-recaptcha-widget" : "*",
         "wbraganca/yii2-dynamicform": "*",
         "kartik-v/yii2-widget-select2": "@dev",
-        "twbs/bootstrap": "4.0.0-beta.2",
+        "twbs/bootstrap": "4.0.0-beta.3",
         "luyadev/luya-bootstrap4": "^1.0@dev",
         "fortawesome/font-awesome": "~4.7",
         "powerkernel/yii2-photoswipe": "*"
