--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "himiklab/yii2-recaptcha-widget" : "*",
         "wbraganca/yii2-dynamicform": "*",
         "kartik-v/yii2-widget-select2": "@dev",
-        "twbs/bootstrap": "4.0.0-beta.3",
+        "twbs/bootstrap": "4.0.0",
         "luyadev/luya-bootstrap4": "^1.0@dev",
         "fortawesome/font-awesome": "~4.7",
         "powerkernel/yii2-photoswipe": "*"
