--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "himiklab/yii2-recaptcha-widget" : "*",
         "wbraganca/yii2-dynamicform": "*",
         "kartik-v/yii2-widget-select2": "@dev",
+        "kartik-v/yii2-widget-typeahead": "*",
         "twbs/bootstrap": "4.0.0",
         "luyadev/luya-bootstrap4": "^1.0@dev",
         "fortawesome/font-awesome": "~4.7",
