--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=7.0",
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
@@ -25,6 +25,7 @@
         "dench/yii2-block": "@dev",
         "dench/yii2-products": "@dev",
         "dench/yii2-modal": "@dev",
+        "dench/yii2-cart": "@dev",
         "bower-asset/photoswipe": "*",
         "kartik-v/bootstrap-fileinput": "4.3.8",
         "himiklab/yii2-recaptcha-widget" : "*",
