--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "luyadev/luya-bootstrap4": "^1.0@dev",
         "fortawesome/font-awesome": "~4.7",
         "powerkernel/yii2-photoswipe": "*",
-        "kartik-v/yii2-widget-depdrop": "@dev"
+        "kartik-v/yii2-widget-depdrop": "@dev",
+        "liqpay/liqpay": "^1.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
