--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "fortawesome/font-awesome": "~4.7",
         "powerkernel/yii2-photoswipe": "*",
         "kartik-v/yii2-widget-depdrop": "@dev",
-        "liqpay/liqpay": "^1.2"
+        "liqpay/liqpay": "^1.2",
+        "ext-json": "^1.6"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
