--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
         "yiisoft/yii2": "2.0.38",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
-        "dench/yii2-language": "@dev",
+        "dench/yii2-language": "dev-master#3cb58a0",
         "dench/yii2-page": "@dev",
-        "dench/yii2-image": "@dev",
+        "dench/yii2-image": "dev-master#af5c782",
         "dench/yii2-sortable": "@dev",
         "dench/yii2-block": "@dev",
         "dench/yii2-products": "@dev",
-        "dench/yii2-modal": "@dev",
+        "dench/yii2-modal": "dev-master#56bdf33",
         "dench/yii2-cart": "@dev",
         "bower-asset/photoswipe": "*",
         "kartik-v/bootstrap-fileinput": "4.3.8",
