--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,11 @@
         "process-timeout": 1800,
         "fxp-asset": {
             "enabled": false
-        }
+        },
+        "platform": {
+            "php": "5.6.5"
+        },
+        "preferred-install": "dist"
     },
     "scripts": {
         "post-create-project-cmd": [
