--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "kartik-v/yii2-widget-depdrop": "@dev",
         "liqpay/liqpay": "^1.2",
         "yiisoft/yii2-httpclient": "^2.0",
-        "yiisoft/yii2-queue": "^2.3"
+        "yiisoft/yii2-queue": "^2.3",
+        "phpmailer/phpmailer": "~6.5.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
